objects/OppotunityContactRole__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for store the selected and primary contacts temperately.</description>
    <fields>
        <fullName>PrimaryId__c</fullName>
        <label>PrimaryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <defaultValue>&quot;Opportunity Contact&quot;</defaultValue>
        <description>Setting Default Contact Role as &apos;Opportunity Contact&apos;</description>
        <label>Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlectedContacts__c</fullName>
        <label>SlectedContacts</label>
        <type>TextArea</type>
    </fields>
    <label>OppotunityContactRole</label>
</CustomObject>